# ROS-Robot

./: .gitignore  .gitmodules  README.md  installedPackages.txt  processing.py
.github/workflows/: main.yml
error_tests/: test1.txt  test10.txt  test11.txt  test12.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  test_imu1.txt  test_imu2.txt  test_imu3.txt  test_imu4.txt
src/: ?
src/pantilt_control/: CMakeLists.txt  package.xml
src/pantilt_control/src/: drive_pantilt.py  pca9685_controller.py
src/pose_measure/: CMakeLists.txt  package.xml
src/pose_measure/src/: .frame_tf.py.swp  error.py  frame_tf.py  frame_tf.py.save
src/robot_goal_gen/: CMakeLists.txt  package.xml
src/robot_goal_gen/launch/: goal_set.launch
src/robot_goal_gen/src/: setTargetPos.py
src/robotkinematics/: CMakeLists.txt  package.xml
src/robotkinematics/include/: Body_Pose_Controller.cpp  Body_Pose_Controller.h  CPos_wrt_B.cpp  CPos_wrt_B.h  CPos_wrt_I.cpp  CPos_wrt_I.h  CallTheDead.cpp  CallTheDead.h  IK_Solver_BodyRot_BodyPos.cpp  IK_Solver_BodyRot_BodyPos.h  Leg_Controller.cpp  Leg_Controller.h  Leg_Controller_B.cpp  Leg_Controller_B.h  Robot_Control.cpp  Robot_Control.h  Robot_Control_data.cpp  Robot_Control_data.h  Robot_Control_initialize.cpp  Robot_Control_initialize.h  Robot_Control_rtw.bat  Robot_Control_rtw.mk  Robot_Control_rtw.rsp  Robot_Control_rtw_comp.rsp  Robot_Control_rtwutil.cpp  Robot_Control_rtwutil.h  Robot_Control_types.h  abs.cpp  abs.h  abs1.cpp  abs1.h  all.cpp  all.h  allOrAny.cpp  allOrAny.h  angle.cpp  angle.h  angle1.cpp  angle1.h  anyNonFinite.h  (+135 more)
src/robotkinematics/include/examples/: main.cpp  main.h
src/robotkinematics/include/html/: report.mldatx
src/robotkinematics/include/interface/: _coder_Robot_Control_api.c  _coder_Robot_Control_api.cpp  _coder_Robot_Control_api.h  _coder_Robot_Control_info.c  _coder_Robot_Control_info.cpp  _coder_Robot_Control_info.h  _coder_Robot_Control_mex.c  _coder_Robot_Control_mex.cpp  _coder_Robot_Control_mex.h
src/robotkinematics/include/matlab_code/: .Robot_Control.h.swp  Body_Pose_Controller.cpp  Body_Pose_Controller.h  Leg_Controller.cpp  Leg_Controller.h  Leg_Controller_B.cpp  Robot_Control.cpp  Robot_Control_data.h  Robot_Control_initialize.cpp  Robot_Control_rtw.mk  abs1.h  all.cpp  all.h  allOrAny.cpp  allOrAny.h  angle.h  angle1.h  anyNonFinite.cpp  atan2.h  atan21.cpp  centroid_codeGen.h  circshift.cpp  circshift.h  codedescriptor.dmr  combineVectorElements.cpp  cos.cpp  cos1.h  cross.cpp  defines.txt  exp.cpp  exp1.h  eye.cpp  find_pgon_goal.h  ifWhileCond.h  isequal.cpp  isfinite.cpp  isfinite.h  isinf.h  isnan.cpp  mldivide.h  (+36 more)
src/robotkinematics/include/matlab_code/html/: report.mldatx
src/robotkinematics/include/matlab_code/interface/: _coder_Robot_Control_api.h
src/robotkinematics/launch/: robotrun.launch
src/robotkinematics/src/: kinematics_wrapper.cpp  kinematics_wrapper.cpp'
src/robotkinematics/srv/: goToInit.srv
src/servo_control/: 99-gpio.rules  CMakeLists.txt  README.md  package.xml
src/servo_control/include/: Makefile  gpiodtest.c  servo_adc.c  servo_adc.h  servo_adc_example.c  servo_adc_example_old.c  servo_adc_old.c
src/servo_control/msg/: MotorVector.msg
src/servo_control/src/: Makefile  feedbackControl.py  pca9685_controller.py  rpiGpio.c  rpiGpio.h  servo_adc.c  servo_adc.h  servo_feedback.py  servo_feedback_measured.cpp  servo_target.py  spiTest.c  test.c
src/servo_driver/: CMakeLists.txt  package.xml
src/servo_driver/src/: pca9685_controller.py  pca_driver.py  timing.py
src/servo_driver/srv/: getUp.srv
